--- a/PROJECT1/Makefile
+++ b/PROJECT1/Makefile
@@ -1,5 +1,11 @@
+run:
+	python main.py
+
 crawl:
 	python -W ignore crawl.py
 
-clean:
-	rm -rf downloaded
+#clean:
+#	rm -rf downloaded
+
+clean_res:
+	rm -rf res
